# foreign

./: .gitignore  ChangeLog.md  LICENSE  README.md  foreign.cabal
.github/workflows/: ci.yaml  publish.yml
cbits/: hs_cpp_std.cpp  hs_std_string.cpp
include/: hs_foreign.h
src/: HsForeign.hs
src/HsForeign/: AsyncFFI.hs  CppStd.hs  Primitive.hs  String.hs  Utils.hs
test/HsForeign/: AsyncFFISpec.hs  PrimitiveSpec.hs  StringSpec.hs
test/cbits/: ffi.c
