cabal-version:      2.4
name:               foreign
version:            0.1.0.0

-- synopsis:
description:
  Please see the README on Github at <https://github.com/4eUeP/foreign#readme>

license:            BSD-3-Clause
license-file:       LICENSE
copyright:          Copyright (c)
author:             mu
maintainer:         mu@laxcat.xyz
tested-with:        GHC ==8.8.4 || ==8.10.7
category:           Foreign
homepage:           https://github.com/4eUeP/foreign
bug-reports:        https://github.com/4eUeP/foreign/issues
build-type:         Simple
extra-source-files:
  ChangeLog.md
  README.md

source-repository head
  type:     git
  location: https://github.com/4eUeP/foreign

library
  hs-source-dirs:   src
  exposed-modules:  Lib
  build-depends:
    , base       >=4.11 && <5
    , ghc-prim   >=0.5  && <1.0
    , primitive  ^>=0.7

  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

test-suite foreign-test
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  hs-source-dirs:     test
  build-depends:
    , base     >=4.11 && <5
    , foreign
    , hspec

  default-language:   Haskell2010
  build-tool-depends: hspec-discover:hspec-discover >=2 && <3
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -threaded -rtsopts -with-rtsopts=-N
